<resources>
    <string name="app_name">슈라</string>
    <string name="facebook_app_id">913241899354521</string>
    <string name="facebook_client_token">EAAMZBlrMBSZAkBO8IlKSTNMgglYjQ3MLTvys3AUN56vIBZCGW6CRZBYTBmnAptckJnDZC66B2tg1KBKSpvwUJeZBVICkfec8bssJVhf3SRwrsEYVA9R3HeZCLL5SZB8EsUI7YLzZApXmUJsQRgdnR6iTaHIJXAcdEgDuGZCJIbMoHD0FtDukT5EZBwHsahdTOneKmNC</string>
    <string name="title_club_lounge">ClubLounge</string>
    <string name="title_vip_lounge">VIPLounge</string>
    <string name="title_home">Home</string>
    <string name="title_anonymous_form">AnonymousForm</string>
    <string name="title_my_page">MyPage</string>
    <string name="title_login">LoginActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="strike_text"><strike>3000개 하트</strike></string>
    <string name="main_url">"https://play.google.com/store/apps/details?id=com.supercarlounge.supercar"</string>
    <string name="chrome_package">"com.android.chrome"</string>
    <string name="internet_package">"com.sec.android.app.sbrowser"</string>
    <string name="supercar_lounge_rul1">"https://www.instagram.com/supercarlounge_official/"</string>
    <string name="supercar_lounge_rul2">"https://www.youtube.com/channel/UCcEnx6W4wqBSFNcpHO7Y3Pg"</string>
    <string name="supercar_lounge_rul3">"https://www.supercarlounge.com/"</string>
    <string name="resend_text"><u>재전송</u></string>
    <string name="heart_text"><u>하트입력</u></string>
    <string name="_post_notice">슈퍼카라운지 이용약관 제12조 (게시물에 대한 책임) 1. 회사는 회원이 게시하거나 전달하는 서비스 내의 게시물이 다음 각 호의 경우에 해당한다고 판단되는 경우 사전 통지 없이 삭제할 수 있으며, 이에 대해 회사는 어떠한 책임도 지지 않습니다. 1) 회사, 다른 회원 또는 제3자를 비방하거나 중상모략으로 명예를 손상시키는 내용인 경우 2) 공공질서 및 미풍양속에 위반되는 내용의 게시물에 해당하는 경우 3) 범죄 행위에 결부된다고 인정되는 내용인 경우 4) 회사 또는 제3자의 저작권, 기타 타인의 권리를 침해하는 내용인 경우 5) 회사의 운영진, 직원, 혹은 관계자를 사칭하여 제3자로 하여금 회사의 공식입장이라고 오인하게 하는 내용인 경우 6) 회사에서 제공하는 서비스와 관련 없는 내용인 경우 7) 불필요하거나 승인되지 않은 광고, 판촉물을 게재하는 경우 8) 타인의 명의 등을 무단으로 도용하여 작성한 내용이거나, 타인이 입력한 정보를 무단으로 위·변조한 내용인 경우 9) 동일한 내용을 중복하여 다수 게시하는 등 게시의 목적에 어긋나는 경우 10) 게시물의 정보를 외부 서비스에서 사용하는 행위를 금지하는 사이트에서 URL 정보를 수집하여 게재하는 경우 11) 기타 관계 법령 및 회사의 개별 서비스 별 세부이용지침 등에 위반된다고 판단되는 경우 2. 회사는 개별 서비스 별로 게시물과 관련된 세부이용지침을 별도로 정하여 시행할 수 있으며, 회원은 그 지침에 따라 게시물(회원 간의 전달 포함)을 게재하여야 합니다. 제13조 (게시물의 저작권 등) 1. 회원이 서비스 내에 게시한 게시물의 저작권은 저작권법에 의해 보호를 받으며, 회사가 작성한 저작물에 대한 저작권 및 기타 지적재산권은 회사에 귀속합니다. 2. 회원은 자신이 서비스 내에 게시한 게시물을 회사가 국내외에서 다음 각 호의 목적으로 사용하는 것을 허락합니다. 1) 서비스(제3자가 운영하는 사이트 또는 미디어의 일정 영역 내에 입점하여 서비스가 제공되는 경우 포함) 내에서 게시물을 사용하기 위하여 게시물의 크기를 변환하거나 단순화하는 등의 방식으로 수정하는 것 2) 회사 또는 관계사가 운영하는 본 서비스 및 연동 서비스 에 게시물을 복제·전송·전시하는 것. 다만, 회원이 게시물의 복제·전송·전시에 반대 의견을 전자우편을 통해 관리자에게 통지할 경우에는 그러하지 않습니다. 3) 회사의 서비스를 홍보하기 위한 목적으로 미디어, 소셜 미디어를 포함한 디지털 마케팅 채널, 통신사 등에게 게시물의 내용을 보도, 방영하게 하는 것 3. 전 항의 규정에도 불구하고, 회사가 게시물을 전항 각 호에 기재된 목적 이외에 제3자에게 게시물을 제공하고 금전적 대가를 지급받는 경우에는 사전에 전화, 전자우편 등의 방법으로 회원의 동의를 얻습니다. 이 경우 회사는 회원에게 별도의 보상을 제공합니다. 4. 회원이 서비스에 게시물을 게재하는 것은 다른 회원이 게시물을 서비스 내에서 사용하거나, 회사가 검색결과로 사용하는 것을 허락한 것으로 봅니다. 그리고 스마트폰, 태블릿 PC의 서비스 이용자(앱 또는 브라우저로 서비스를 비가입 방문한 경우도 포함)가 소프트웨어(예: 앱, 브라우저) 또는 하드웨어(예: 스마트폰, 태블릿PC)에서 제공하는 기능을 이용하여 게시물을 저장한 후 활용하는 것을 허락한 것으로 봅니다. 5. 제20조에 의해 이용계약이 해지되는 경우 작성했던 게시물 및 댓글은 자동으로 삭제되지 않으며, 회원정보 삭제로 인해 작성자 본인을 확인할 수 없으므로 게시물 편집 및 삭제 처리가 원천적으로 불가능 합니다. 게시물 삭제를 원하시는 경우에는 먼저 해당 게시물을 삭제 하신 후, 이용계약 해지 신청(탈퇴 신청)을 하여야 합니다. 다만, 다른 회원 또는 제3자에게 의하여 스크랩, 공유 등의 기능을 통해 다시 게시된 게시물 및 댓글 등 다른 회원의 정상적인 서비스 이용에 필요한 게시물은 삭제되지 않습니다. 6. 회사는 서비스 운영정책상 또는 회사가 운영하는 사이트 간의 통합 등을 하는 경우 게시물의 내용을 변경하지 아니하고 게시물의 게재 위치를 변경·이전하거나 사이트 간 공유하여 서비스할 수 있습니다. 다만, 게시물의 이전·변경 또는 공유를 하는 경우에는 사전에 공지합니다.</string>
    <string name="drive_noti">슈퍼카라운지 이용약관 제12조 (게시물에 대한 책임) 1. 회사는 회원이 게시하거나 전달하는 서비스 내의 게시물이 다음 각 호의 경우에 해당한다고 판단되는 경우 사전 통지 없이 삭제할 수 있으며, 이에 대해 회사는 어떠한 책임도 지지 않습니다. 1) 회사, 다른 회원 또는 제3자를 비방하거나 중상모략으로 명예를 손상시키는 내용인 경우 2) 공공질서 및 미풍양속에 위반되는 내용의 게시물에 해당하는 경우 3) 범죄 행위에 결부된다고 인정되는 내용인 경우 4) 회사 또는 제3자의 저작권, 기타 타인의 권리를 침해하는 내용인 경우 5) 회사의 운영진, 직원, 혹은 관계자를 사칭하여 제3자로 하여금 회사의 공식입장이라고 오인하게 하는 내용인 경우 6) 회사에서 제공하는 서비스와 관련 없는 내용인 경우 7) 불필요하거나 승인되지 않은 광고, 판촉물을 게재하는 경우 8) 타인의 명의 등을 무단으로 도용하여 작성한 내용이거나, 타인이 입력한 정보를 무단으로 위·변조한 내용인 경우 9) 동일한 내용을 중복하여 다수 게시하는 등 게시의 목적에 어긋나는 경우 10) 게시물의 정보를 외부 서비스에서 사용하는 행위를 금지하는 사이트에서 URL 정보를 수집하여 게재하는 경우 11) 기타 관계 법령 및 회사의 개별 서비스 별 세부이용지침 등에 위반된다고 판단되는 경우 2. 회사는 개별 서비스 별로 게시물과 관련된 세부이용지침을 별도로 정하여 시행할 수 있으며, 회원은 그 지침에 따라 게시물(회원 간의 전달 포함)을 게재하여야 합니다. 제13조 (게시물의 저작권 등) 1. 회원이 서비스 내에 게시한 게시물의 저작권은 저작권법에 의해 보호를 받으며, 회사가 작성한 저작물에 대한 저작권 및 기타 지적재산권은 회사에 귀속합니다. 2. 회원은 자신이 서비스 내에 게시한 게시물을 회사가 국내외에서 다음 각 호의 목적으로 사용하는 것을 허락합니다. 1) 서비스(제3자가 운영하는 사이트 또는 미디어의 일정 영역 내에 입점하여 서비스가 제공되는 경우 포함) 내에서 게시물을 사용하기 위하여 게시물의 크기를 변환하거나 단순화하는 등의 방식으로 수정하는 것 2) 회사 또는 관계사가 운영하는 본 서비스 및 연동 서비스 에 게시물을 복제·전송·전시하는 것. 다만, 회원이 게시물의 복제·전송·전시에 반대 의견을 전자우편을 통해 관리자에게 통지할 경우에는 그러하지 않습니다. 3) 회사의 서비스를 홍보하기 위한 목적으로 미디어, 소셜 미디어를 포함한 디지털 마케팅 채널, 통신사 등에게 게시물의 내용을 보도, 방영하게 하는 것 3. 전 항의 규정에도 불구하고, 회사가 게시물을 전항 각 호에 기재된 목적 이외에 제3자에게 게시물을 제공하고 금전적 대가를 지급받는 경우에는 사전에 전화, 전자우편 등의 방법으로 회원의 동의를 얻습니다. 이 경우 회사는 회원에게 별도의 보상을 제공합니다. 4. 회원이 서비스에 게시물을 게재하는 것은 다른 회원이 게시물을 서비스 내에서 사용하거나, 회사가 검색결과로 사용하는 것을 허락한 것으로 봅니다. 그리고 스마트폰, 태블릿 PC의 서비스 이용자(앱 또는 브라우저로 서비스를 비가입 방문한 경우도 포함)가 소프트웨어(예: 앱, 브라우저) 또는 하드웨어(예: 스마트폰, 태블릿PC)에서 제공하는 기능을 이용하여 게시물을 저장한 후 활용하는 것을 허락한 것으로 봅니다. 5. 제20조에 의해 이용계약이 해지되는 경우 작성했던 게시물 및 댓글은 자동으로 삭제되지 않으며, 회원정보 삭제로 인해 작성자 본인을 확인할 수 없으므로 게시물 편집 및 삭제 처리가 원천적으로 불가능 합니다. 게시물 삭제를 원하시는 경우에는 먼저 해당 게시물을 삭제 하신 후, 이용계약 해지 신청(탈퇴 신청)을 하여야 합니다. 다만, 다른 회원 또는 제3자에게 의하여 스크랩, 공유 등의 기능을 통해 다시 게시된 게시물 및 댓글 등 다른 회원의 정상적인 서비스 이용에 필요한 게시물은 삭제되지 않습니다. 6. 회사는 서비스 운영정책상 또는 회사가 운영하는 사이트 간의 통합 등을 하는 경우 게시물의 내용을 변경하지 아니하고 게시물의 게재 위치를 변경·이전하거나 사이트 간 공유하여 서비스할 수 있습니다. 다만, 게시물의 이전·변경 또는 공유를 하는 경우에는 사전에 공지합니다.</string>
    <string name="vip_drive_text">“VIP드라이브” 항목의 경우, 회원의 게시글이 슈퍼카라운지 홈 화면 최상단에 고정 노출되는 입찰제 과금 서비스입니다.\n\n“VIP드라이브”는 서비스의 입찰 구매가 순으로 TOP 10 드라이브가 등록이 되며, 최초 등록 시로부터 24시간 동안 유효합니다. 해당 상품의 경우 더 높은 구매가를 제시한 드라이버 회원으로 인해 기존의 TOP 10 순위에서 밀려날 경우에는 노출이 되지 않습니다. 회원이 원구매가에 추가금액을 더해 순위가 유지될 경우, 노출이 재개됩니다. \n\n“VIP드라이브” 서비스를 구매하신 경우에는 실시간 경쟁 입찰 서비스로 인하여 취소, 환불이 불가합니다.</string>
    <string name="d_profie_browse_base_tv_2">프로필 열람 승인을요청하시겠습니까?하트가 소모됩니다.</string>
    <string name="d_profie_browse_base_tv_1">프로필 열람시\n하트가 소모됩니다.</string>
    <string name="d_drive_exposure_1">VIP 드라이브 노출이\n시작되었습니다.</string>
    <string name="d_drive_exposure_2">VIP 드라이브 노출이\n제외되었습니다.</string>
    <string name="d_profile_block">이 프로필을\n차단하시겠습니까?</string>
    <string name="d_post_block">이 게시글을\n차단하시겠습니까?</string>
    <string name="d_drive_block">이 드라이브글을\n차단하시겠습니까?</string>
    <string name="d_profie_browes_base_tv_3">님께\n내 프로필 카드 전송하기\n3 하트가 소모됩니다.</string>
    <string name="login_contact_us"><u>문의하기</u></string>
    <string name="comprehensive_insurance"><u>왜 종합보험이 있어야 하나요?</u></string>
    <string name="declaration">신고하기</string>
    <string name="edit">수정하기</string>
    <string name="delete">삭제하기</string>
    <string name="block">차단하기</string>
    <string name="pointmall">포인트 몰</string>
    <string name="poinmall_text1">교환한 모바일 쿠폰은 본인인증된 휴대폰 번호로 발송됩니다.</string>
    <string name="pointmall_text2">교환한 모바일 쿠폰은 환불이나 교환이 어려우니,꼭 상품명과 연락처를</string>
    <string name="pointmall_text2_2">확인 후 구매해주세요!</string>
    <string name="pointmall_text3">교환 시 유효기간을 꼭 확인해주세요! 유효기간 만료후에는 연장이나</string>
    <string name="pointmall_text3_2">환불이 불가능 합니다.</string>
</resources>