<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_club_lounge"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_club_lounge" />

    <item
        android:id="@+id/navigation_vip_lounge"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_vip_lounge" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_anonymous_form"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_anonymous_form" />

    <item
        android:id="@+id/navigation_my_page"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_my_page" />

</menu>