<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="viewModel"
            type="com.supercarlounge.supercar.viewmodel.PointMallViewModel" />
        <variable
            name="Constans"
            type="com.supercarlounge.supercar.Constans" />
        <import type="com.supercarlounge.supercar.R" />
        <import type="android.view.View" />
        <import type="androidx.core.content.ContextCompat" />

    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.6"
        android:background="@color/black">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@{viewModel.titleText}"
            android:textColor="@color/white"
            style="@style/textview_inter_title"
            android:textSize="@dimen/_11sdp"
            android:lineSpacingExtra="@dimen/_3sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingVertical="@dimen/dimen_5"
            android:paddingHorizontal="@dimen/dimen_10"
            android:src="@drawable/ic_ar_left_24px"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.4"
        android:background="@drawable/background_bg"
        tools:ignore="ScrollViewCount">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coord_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:background="@color/trn">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/trn"
        app:layout_scrollFlags="scroll|enterAlways">



    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:collapsedTitleGravity="center"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:orientation="vertical"
            >
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_24"
                android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dimen_24">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    style="@style/textview_inter_title"
                    android:textSize="@dimen/_16sdp"
                    android:text="@string/pointmall"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    style="@style/textview_inter_title"
                    android:textSize="@dimen/_16sdp"
                    android:text="@={viewModel.nowpoint}"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1"
                android:layout_marginBottom="@dimen/dimen_24"
                android:background="@color/my_page_bottom_view" />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="@dimen/dimen_20"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/dimen_3"
                        android:layout_height="@dimen/dimen_3"
                        android:layout_marginRight="@dimen/dimen_5"
                        android:src="@drawable/circle_white"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/textview_inter"
                        android:textSize="@dimen/_9sdp"
                        android:text="@string/poinmall_text1"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="@dimen/dimen_20"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/dimen_3"
                        android:layout_height="@dimen/dimen_3"
                        android:layout_marginRight="@dimen/dimen_5"
                        android:src="@drawable/circle_white"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/textview_inter"
                        android:textSize="@dimen/_9sdp"
                        android:text="@string/pointmall_text2"/>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/textview_inter"
                        android:textSize="@dimen/_9sdp"
                        android:layout_marginStart="@dimen/dimen_8"
                        android:text="@string/pointmall_text2_2"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="@dimen/dimen_20"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/dimen_3"
                        android:layout_height="@dimen/dimen_3"
                        android:layout_marginRight="@dimen/dimen_5"
                        android:src="@drawable/circle_white"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/textview_inter"
                        android:textSize="@dimen/_9sdp"
                        android:text="@string/pointmall_text3"/>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/textview_inter"
                        android:textSize="@dimen/_9sdp"
                        android:layout_marginStart="@dimen/dimen_8"
                        android:text="@string/pointmall_text3_2"/>
                </androidx.appcompat.widget.LinearLayoutCompat>



            </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:pointproductlist="@{viewModel.productlist}"/>



    </androidx.coordinatorlayout.widget.CoordinatorLayout>
        <ImageView
            android:id="@+id/iv_loading"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_50sdp"
            android:visibility="@{viewModel.issend ? View.VISIBLE : View.GONE}" />
    </RelativeLayout>
</LinearLayout>
</layout>